--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,11 @@
 version: "3"
 services:
   db:
-    image: postgres:11-alpine
+    image: postgres:12-alpine
     environment:
       POSTGRES_PASSWORD: postgres
       POSTGRES_USER: postgres
-      POSTGRES_DB: cerebro_dev
+      POSTGRES_DB: postgres
     command: postgres -c shared_preload_libraries=pg_stat_statements
     volumes:
       - db_data:/var/lib/postgresql/data
